update admin yaml and update auto generated files

--- a/swagger/admin.yaml
+++ b/swagger/admin.yaml
@@ -252,6 +252,10 @@ definitions:
       - currentAdminSessionId
       - currentMilSessionId
       - currentOfficeSessionId
+  Users:
+    type: array
+    items:
+      $ref: '#/definitions/User'
   TransportationOffice:
     type: object
     properties:
@@ -1519,6 +1523,48 @@ paths:
           description: request requires user authentication
         404:
           description: not found
+        500:
+          description: server error
+  /users:
+    get:
+      summary: List users
+      description: Returns a list of users
+      operationId: indexUsers
+      tags:
+        - users
+      parameters:
+        - in: query
+          name: filter
+          type: array
+          items:
+            type: string
+        - in: query
+          name: page
+          type: integer
+        - in: query
+          name: perPage
+          type: integer
+        - in: query
+          name: sort
+          type: string
+        - in: query
+          name: order
+          type: boolean
+      responses:
+        200:
+          description: success
+          headers:
+            Content-Range:
+              type: string
+              description: Used for pagination
+          schema:
+            $ref: '#/definitions/Users'
+        400:
+          description: invalid request
+        401:
+          description: request requires user authentication
+        404:
+          description: users not found
         500:
           description: server error
   /users/{userId}:
