--- a/Dockerfile.webhook_client_local
+++ b/Dockerfile.webhook_client_local
@@ -9,16 +9,26 @@ ENV CIRCLECI=true
 COPY --chown=circleci:circleci . /home/circleci/project
 WORKDIR /home/circleci/project
 
+# Add CA files
+USER root
+ADD dod-sw-ca-60.cer /usr/local/share/ca-certificates/dod-sw-ca-60.cer
+ADD dod-root-ca-3.cer /usr/local/share/ca-certificates/dod-root-ca-3.cer
+RUN update-ca-certificates
+
 RUN make clean
 RUN make bin/rds-ca-us-gov-west-1-2017-root.pem
 RUN make bin/webhook-client
+RUN go test ./cmd/webhook-client/webhook -c
+
 
 #########
 # FINAL #
 #########
 
+
 FROM gcr.io/distroless/base:latest
 
+COPY --from=builder --chown=root:root /etc/ssl/certs /etc/ssl/certs
 # mTLS authentication self-signed certificate for use in development and test environments.
 COPY --from=builder --chown=root:root /home/circleci/project/config/tls/devlocal-mtls.cer /config/tls/devlocal-mtls.cer
 COPY --from=builder --chown=root:root /home/circleci/project/config/tls/devlocal-mtls.key /config/tls/devlocal-mtls.key
@@ -28,9 +38,10 @@ COPY --from=builder --chown=root:root /home/circleci/project/bin/rds-ca-us-gov-w
 
 # The main webhook-client binary.
 COPY --from=builder --chown=root:root /home/circleci/project/bin/webhook-client /bin/webhook-client
+COPY --from=builder --chown=root:root /home/circleci/project/webhook.test /bin/webhook.test
 
 # Create and use a host alias file for local development.
 ENV HOSTALIASES=/etc/host.aliases
 COPY --from=builder --chown=root:root /home/circleci/project/config/docker/etc/host.aliases /etc/host.aliases
 
-CMD ["/bin/webhook-client", "db-webhook-notify"]
+CMD ["bin/webhook.test"]
