--- a/swagger/admin.yaml
+++ b/swagger/admin.yaml
@@ -553,7 +553,7 @@ definitions:
         type: string
         format: uuid
         example: 'c56a4180-65aa-42ec-a945-5fd21dec0538'
-  UserRevokeSessionPayload:
+  UserUpdatePayload:
     type: object
     properties:
       revokeAdminSession:
@@ -563,6 +563,9 @@ definitions:
         type: boolean
         x-nullable: true
       revokeMilSession:
+        type: boolean
+        x-nullable: true
+      active:
         type: boolean
         x-nullable: true
   AdminUserUpdatePayload:
@@ -1458,8 +1461,8 @@ paths:
         500:
           description: server error
     patch:
-      summary: revokes a user's session on any specified apps
-      operationId: revokeUserSession
+      summary: Update a user's session or active status
+      operationId: updateUser
       tags:
         - users
       parameters:
@@ -1473,7 +1476,7 @@ paths:
           description: User information
           required: true
           schema:
-            $ref: '#/definitions/UserRevokeSessionPayload'
+            $ref: '#/definitions/UserUpdatePayload'
       responses:
         200:
           description: Successfully updated User
