MB-6175 Make show boolean nullable so it shows up as false in response

--- a/swagger/admin.yaml
+++ b/swagger/admin.yaml
@@ -824,6 +824,7 @@ definitions:
         $ref: '#/definitions/MoveStatus'
       show:
         type: boolean
+        x-nullable: true
       createdAt:
         type: string
         format: date-time
