--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "filepond-plugin-file-validate-size": "^2.2.2",
     "filepond-plugin-file-validate-type": "^1.2.5",
     "filepond-plugin-image-exif-orientation": "^1.0.9",
-    "filepond-plugin-image-preview": "https://github.com/transcom/filepond-plugin-image-preview",
+    "filepond-plugin-image-preview": "^4.5.0",
     "filepond-polyfill": "^1.0.2",
     "formik": "^2.2.6",
     "history": "^4.10.1",
