refactor to remove potential nil dereference errors, make active status required in payload, refactor tests for better coverage

--- a/swagger/admin.yaml
+++ b/swagger/admin.yaml
@@ -570,6 +570,8 @@ definitions:
         example: 'c56a4180-65aa-42ec-a945-5fd21dec0538'
   UserUpdatePayload:
     type: object
+    required:
+      - active
     properties:
       revokeAdminSession:
         type: boolean
@@ -582,7 +584,6 @@ definitions:
         x-nullable: true
       active:
         type: boolean
-        x-nullable: true
   AdminUserUpdatePayload:
     type: object
     properties:
@@ -1545,5 +1546,9 @@ paths:
           description: Must be authenticated to use this end point
         403:
           description: Not authorized to update this user
+        422:
+          description: Validation error
+          schema:
+            $ref: '#/definitions/ValidationError'
         500:
           description: Server error
