--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,7 +53,7 @@ repos:
             pkg/cli/auth.go$|
           )$
       - id: trailing-whitespace
-        exclude: public/swagger-ui/*
+        exclude: ^public/swagger-ui/
 
   - repo: git://github.com/golangci/golangci-lint
     rev: v1.34.1
