Replace facebookgo/clock with benbjohnson/clock due to deprecation of the former
facebookgo/clock is archived and in active for 2 years.
benbjohnson/clock is the repo from which facebookgo was forked

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -24,6 +24,10 @@ linters-settings:
             recommendations:
               - github.com/gobuffalo/pop/v5/soda
             reason: "MilMove is now on Pop v5, do not use older versions of this module"
+        - github.com/facebookgo/clock:
+            recommendations:
+              - github.com/benbjohnson/clock
+            reason: "facebookgo/clock is archived and inactive, recommend using original fork repo"
 linters:
   enable:
     - deadcode
