--- a/Dockerfile.webhook_client_local
+++ b/Dockerfile.webhook_client_local
@@ -19,6 +19,10 @@ RUN make bin/webhook-client
 
 FROM gcr.io/distroless/static:latest
 
+# mTLS authentication self-signed certificate for use in development and test environments.
+COPY --from=builder --chown=root:root /home/circleci/project/config/tls/devlocal-mtls.cer /config/tls/devlocal-mtls.cer
+COPY --from=builder --chown=root:root /home/circleci/project/config/tls/devlocal-mtls.key /config/tls/devlocal-mtls.key
+
 # Public root certificate for RDS in us-gov-west-1.
 COPY --from=builder --chown=root:root /home/circleci/project/bin/rds-ca-us-gov-west-1-2017-root.pem /bin/rds-ca-us-gov-west-1-2017-root.pem
 
