--- a/swagger/internal.yaml
+++ b/swagger/internal.yaml
@@ -31,6 +31,10 @@ definitions:
         type: string
         example: John
         readOnly: true
+      last_name:
+        type: string
+        example: Doe
+        readOnly: true
       service_member:
         $ref: '#/definitions/ServiceMemberPayload'
         x-nullable: true
