DO NOT MERGE: send a notification to stg from exp

--- a/config/env/exp.app-webhook-client.env
+++ b/config/env/exp.app-webhook-client.env
@@ -4,6 +4,7 @@ DB_PORT=5432
 DB_RETRY_INTERVAL=5s
 DB_SSL_MODE=verify-full
 DB_USER=crud
-HOSTNAME=api.exp.move.mil
+FILENAME=/bin/webhook_test_data.json
+HOSTNAME=api.stg.move.mil
 PERIOD=20s
 PORT=443
