--- a/Dockerfile.webhook_client
+++ b/Dockerfile.webhook_client
@@ -21,4 +21,7 @@ COPY --from=builder --chown=root:root /etc/ssl/certs /etc/ssl/certs
 COPY bin/rds-ca-us-gov-west-1-2017-root.pem /bin/rds-ca-us-gov-west-1-2017-root.pem
 COPY bin/webhook-client /bin/webhook-client
 
+# Prepare a test message to for demonstration purposes.
+COPY pkg/testdatagen/testdata/webhook_test_data.json /bin/webhook_test_data.json
+
 CMD ["/bin/webhook-client", "webhook-notify"]
