--- a/Dockerfile.webhook_client
+++ b/Dockerfile.webhook_client
@@ -1,4 +1,22 @@
+###########
+# BUILDER #
+###########
+
+FROM milmove/circleci-docker:milmove-app as builder
+
+# Prepare public DOD certificates.
+COPY config/tls/dod-root-ca-3.cer /usr/local/share/ca-certificates/dod-root-ca-3.crt
+COPY config/tls/dod-sw-ca-60.cer /usr/local/share/ca-certificates/dod-sw-ca-60.crt
+USER root
+RUN update-ca-certificates
+
+#########
+# FINAL #
+#########
 FROM gcr.io/distroless/static:latest
+
+# Copy DOD certs from the builder.
+COPY --from=builder --chown=root:root /etc/ssl/certs /etc/ssl/certs
 
 COPY bin/rds-ca-us-gov-west-1-2017-root.pem /bin/rds-ca-us-gov-west-1-2017-root.pem
 COPY bin/webhook-client /bin/webhook-client
