--- a/.envrc
+++ b/.envrc
@@ -297,6 +297,14 @@ export AV_IGNORE_FILES=pkg/testdatagen/testdata/orders.pdf
 # - orders.pdf.UNOFFICIAL is a finding based on the ignored file above of the same name
 export AV_IGNORE_SIGS="PUA.Pdf.Trojan.EmbeddedJavaScript-1 orders.pdf.UNOFFICIAL"
 
+# -- nix
+PATH_add /nix/var/nix/profiles/mymove/bin
+PATH_add ./node_modules/.bin
+export GOPATH=$PWD/.gopath
+PATH_add ./.gopath/bin
+export NPM_CONFIG_PREFIX=$PWD/.npmglobal
+PATH_add ./.npmglobal/bin
+
 ##############################################
 # Load Local Overrides and Check Environment #
 ##############################################
