Revert "run acceptance tests"
This reverts commit 8ed35b226384f188ee22e1921e3bb092f09ebf72.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1343,7 +1343,7 @@ workflows:
             - pre_deps_golang
           filters:
             branches:
-              only: cj-re-add-ac-testing
+              only: placeholder_branch_name
 
       - integration_tests:
           requires:
