--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1338,7 +1338,7 @@ workflows:
             - pre_deps_golang
           filters:
             branches:
-              only: cj-re-add-ac-testing
+              only: placeholder_branch_name
 
       - integration_tests:
           requires:
