--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -205,7 +205,7 @@ paths:
         '200':
           description: Successfully hid MTOs.
           schema:
-            $ref: '#/definitions/MoveTaskOrderIDs'
+            $ref: '#/definitions/MTOHideMovesResponse'
         '400':
           $ref: '#/responses/InvalidRequest'
         '401':
@@ -1142,6 +1142,32 @@ definitions:
       $ref: '#/definitions/MTOAgent'
     type: array
     maxItems: 2
+  MTOHideMove:
+    description: MTOServiceItem describes a base type of a service item. Polymorphic type. Both Move Task Orders and MTO Shipments will have MTO Service Items.
+    type: object
+    properties:
+      moveTaskOrderID:
+        example: 1f2270c7-7166-40ae-981e-b200ebdf3054
+        format: uuid
+        type: string
+        description: ID of the associated moveTaskOrder
+      hideReason:
+        example: item was too heavy
+        type: string
+        x-nullable: true
+        description: Reason the move was selected to be hidden
+  MTOHideMovesResponse:
+    description: MTOHideMovesResponse describes the moves that were hidden that contained non-approved fake data to use in the MilMove system.
+    type: object
+    properties:
+      numberMovesHidden:
+        type: integer
+        description: Number of moves that were hidden
+      moves:
+        description: Array of moves that were hidden.
+        type: array
+        items:
+          $ref: '#/definitions/MTOHideMove'
   MTOServiceItem:
     description: MTOServiceItem describes a base type of a service item. Polymorphic type. Both Move Task Orders and MTO Shipments will have MTO Service Items.
     type: object
