--- a/swagger/admin.yaml
+++ b/swagger/admin.yaml
@@ -863,6 +863,52 @@ definitions:
         type: string
         title: Last Name
         x-nullable: true
+  WebhookSubscriptionStatus:
+    type: string
+    title: Webhook subscription status
+    enum:
+      - ACTIVE
+      - FAILING
+      - DISABLED
+    x-display-value:
+      DRAFT: Draft
+      SUBMITTED: Submitted
+      APPROVED: Approved
+      CANCELED: Canceled
+  WebhookSubscriptions:
+    type: array
+    items:
+      $ref: '#/definitions/WebhookSubscription'
+  WebhookSubscription:
+    type: object
+    description: >-
+      Represents subscribers who expect certain notifications to be pushed to their servers.
+      Used for the Prime and Prime-related events specifically.
+    properties:
+      id:
+        type: string
+        format: uuid
+        example: c56a4180-65aa-42ec-a945-5fd21dec0538
+        readOnly: true
+      status:
+        $ref: '#/definitions/WebhookSubscriptionStatus'
+      callbackUrl:
+        type: string
+        description: The URL to which the notifications for this subscription will be pushed to.
+      severity:
+        type: integer
+        minimum: 0
+      eventKey:
+        type: string
+        description: >-
+          A string used to represent which events this subscriber expects to be notified about.
+          Corresponds to the possible event_key values in webhook_notifications.
+      createdAt:
+        type: string
+        format: date-time
+      updatedAt:
+        type: string
+        format: date-time
 paths:
   /access_codes:
     get:
@@ -1639,5 +1685,45 @@ paths:
           description: Validation error
           schema:
             $ref: '#/definitions/ValidationError'
+        500:
+          description: Server error
+  /webhook_subscriptions:
+    get:
+      summary: Lists webhook subscriptions
+      description: Returns a list of webhook subscriptions
+      operationId: indexWebhookSubscriptions
+      tags:
+        - webhook_subscriptions
+      parameters:
+        - in: query
+          name: filter
+          type: string
+        - in: query
+          name: page
+          type: integer
+        - in: query
+          name: perPage
+          type: integer
+        - in: query
+          name: sort
+          type: string
+        - in: query
+          name: order
+          type: boolean
+      responses:
+        200:
+          description: success
+          headers:
+            Content-Range:
+              type: string
+              description: Used for pagination
+          schema:
+            $ref: '#/definitions/WebhookSubscriptions'
+        400:
+          description: Invalid request
+        401:
+          description: Not authenticated for this endpoint
+        404:
+          description: Webhook subscriptions not found
         500:
           description: Server error
