Testing RTL vs Enzyme

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@testing-library/react": "^11.2.5",
     "@trussworks/react-file-viewer": "https://github.com/trussworks/react-file-viewer#ds-enable-image-file-type-support",
     "@trussworks/react-uswds": "^1.10.0",
     "bytes": "^3.0.0",
@@ -111,6 +112,7 @@
     "@storybook/addons": "^6.1.16",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.16",
+    "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react-hooks": "^5.0.3",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "cypress": "^6.3.0",
