--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "@storybook/react": "^6.1.16",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react-hooks": "^5.0.3",
+    "@testing-library/user-event": "^12.6.3",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "cypress": "^6.3.0",
     "cypress-audit": "^0.3.0",
@@ -134,6 +135,7 @@
     "mime-types": "^2.1.28",
     "mockdate": "^3.0.2",
     "prettier": "2.2.1",
+    "react-select-event": "^5.1.0",
     "react-test-renderer": "^17.0.1",
     "source-map-explorer": "^2.5.2",
     "storybook-addons-abstract": "^5.0.6"
