clearer language for description in yaml

--- a/swagger/admin.yaml
+++ b/swagger/admin.yaml
@@ -894,7 +894,7 @@ definitions:
         type: string
         format: uuid
         example: d494f114-05a2-4b39-840c-3d33243b7e29
-        description: Unique identifier for the entity that is subscribed
+        description: Unique identifier for the subscriber
       status:
         $ref: '#/definitions/WebhookSubscriptionStatus'
       callbackUrl:
