Change yaml and service

--- a/swagger/admin.yaml
+++ b/swagger/admin.yaml
@@ -914,6 +914,23 @@ definitions:
       updatedAt:
         type: string
         format: date-time
+  WebhookSubscriptionCreatePayload:
+    type: object
+    properties:
+      subscriberId:
+        type: string
+        format: uuid
+        example: c56a4180-65aa-42ec-a945-5fd21dec0538
+      status:
+        $ref: '#/definitions/WebhookSubscriptionStatus'
+      eventKey:
+        type: string
+        description: >-
+          A string used to represent which events this subscriber expects to be notified about.
+          Corresponds to the possible event_key values in webhook_notifications.
+      callbackUrl:
+        type: string
+        description: The URL to which the notifications for this subscription will be pushed to.
 paths:
   /access_codes:
     get:
@@ -1730,6 +1747,31 @@ paths:
           description: Not authenticated for this endpoint
         404:
           description: Webhook subscriptions not found
+        500:
+          description: Server error
+    post:
+      summary: create a webhook subscription
+      description: creates and returns a webhook subscription
+      operationId: createWebhookSubscription
+      tags:
+        - webhook_subscriptions
+      parameters:
+        - in: body
+          name: webhookSubscription
+          description: Webhook subscription information
+          schema:
+            $ref: '#/definitions/WebhookSubscriptionCreatePayload'
+      responses:
+        201:
+          description: Successfully created webhook subscription
+          schema:
+            $ref: '#/definitions/WebhookSubscription'
+        400:
+          description: Invalid Request
+        401:
+          description: Must be authenticated to use this end point
+        403:
+          description: Not authorized to create a webhook subscription
         500:
           description: Server error
   /webhook_subscriptions/{webhookSubscriptionId}:
