--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1366,7 +1366,7 @@ workflows:
             - pre_deps_golang
           filters:
             branches:
-              only: jm-hide-moves-not-fake-data
+              only: placeholder_branch_name
 
       - integration_tests:
           requires:
@@ -1380,7 +1380,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: jm-hide-moves-not-fake-data
+              ignore: placeholder_branch_name
 
       - integration_tests_mtls:
           requires:
@@ -1393,7 +1393,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: jm-hide-moves-not-fake-data
+              ignore: placeholder_branch_name
 
       - client_test:
           requires:
@@ -1401,7 +1401,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: jm-hide-moves-not-fake-data
+              ignore: placeholder_branch_name
 
       - server_test:
           requires:
@@ -1409,7 +1409,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: jm-hide-moves-not-fake-data
+              ignore: placeholder_branch_name
 
       - build_app:
           requires:
@@ -1453,28 +1453,28 @@ workflows:
             - build_app
           filters:
             branches:
-              only: jm-hide-moves-not-fake-data
+              only: placeholder_branch_name
 
       - push_migrations_exp:
           requires:
             - build_migrations
           filters:
             branches:
-              only: jm-hide-moves-not-fake-data
+              only: placeholder_branch_name
 
       - push_tasks_exp:
           requires:
             - build_tasks
           filters:
             branches:
-              only: jm-hide-moves-not-fake-data
+              only: placeholder_branch_name
 
       - push_webhook_client_exp:
           requires:
             - build_webhook_client
           filters:
             branches:
-              only: jm-hide-moves-not-fake-data
+              only: placeholder_branch_name
 
       - deploy_exp_migrations:
           requires:
@@ -1489,35 +1489,35 @@ workflows:
             - push_webhook_client_exp
           filters:
             branches:
-              only: jm-hide-moves-not-fake-data
+              only: placeholder_branch_name
 
       - deploy_exp_tasks:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: jm-hide-moves-not-fake-data
+              only: placeholder_branch_name
 
       - deploy_exp_app:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: jm-hide-moves-not-fake-data
+              only: placeholder_branch_name
 
       - deploy_exp_app_client_tls:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: jm-hide-moves-not-fake-data
+              only: placeholder_branch_name
 
       - deploy_exp_webhook_client:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: jm-hide-moves-not-fake-data
+              only: placeholder_branch_name
 
       - push_app_stg:
           requires:
