added puppeteer v7 as dependency

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "path": "^0.12.7",
     "path-to-regexp": "^6.2.0",
     "prop-types": "^15.7.2",
+    "puppeteer": "^7.0.4",
     "query-string": "6",
     "ra-data-simple-rest": "^3.10.4",
     "ra-language-english": "^3.12.0",
